Implementing persistence layer.